--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "jest": "^27.5.1",
     "postcss": "^8.4.39",
+    "react-testing-library": "^8.0.1",
     "tailwindcss": "^3.4.6"
   }
 }
