--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://oh-seo-jin.github.io/shooking",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
