--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
